 - gui: renamed manager::update to update_ui
 - gui: renamed manager::read_files to load_ui
 - gui: renamed manager::create_lua to register_lua_glues
 - gui: renamed event_manager to event_emitter
 - gui: renamed input::manager::get_key_name into input::get_key_codename
 - gui: renamed input::manager::get_mouse_button_string into input::get_mouse_button_codename
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: removed uiobject::get_base()
 - gui: removed uiobject::push_on_lua()
 - gui: removed uiobject::get_id() and set_id()
 - gui: removed anchor::set_object() (now a reference, cannot change)
 - gui: removed font_string::get_shadow_x_offset()
 - gui: removed font_string::get_shadow_y_offset()
 - gui: removed uiobject::set_abs_point and uiobject::set_rel_point, use set_point() instead
 - gui: removed anchor::get_abs_x/get_abs_y and added anchor::get_point
 - gui: removed uiobject::get_abs_width/height and added uiobject::get_dimensions()
 - gui: removed uiobject::get_apparent_width/height and added uiobject::get_apparent_dimensions()
 - gui: removed uiobject::set_newly_created/is_newly_created (no longer necessary)
 - gui: removed manager::is_loading_ui() (no longer necessary)
 - gui: removed manager::begin() and end()
 - gui: renamed input::manager::get_key_name overloads with modifiers
 - gui: renamed input::manager to input::dispatcher
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
 - gui: font_string::set_offset now takes a single vector2f argument
 - gui: font_string::set_shadow_offset now takes a single vector2f argument
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)