@@ -66,9 +66,12 @@
 *
 *   - Events related to keyboard input (`OnKeyDown`, `OnKeyUp`) require
 *   @{Frame:enable_keyboard}.
-*   - Events related to mouse input (`OnDragStart`, `OnDragStop`,`OnEnter`,
-*   `OnLeave`, `OnMouseUp`, `OnMouseDown`, `OnMouseWheel`, `OnReceiveDrag`)
+*   - Events related to mouse click input (`OnDragStart`, `OnDragStop`,
+*   `OnMouseUp`, `OnMouseDown`) require frame::enable_mouse_click.
+*   - Events related to mouse move input (`OnEnter`, `OnLeave`)
 *   require @{Frame:enable_mouse}.
+*   - Events related to mouse wheel input (`OnMouseWheel`) require
+*   @{Frame:enable_mouse_wheel}.
 *
 *   To use the second type of events (generic events), you have to register
 *   a callback for `OnEvent` _and_ register the frame for each generic event
@@ -115,7 +118,9 @@
 *   position and size of the frame and its title region, but not the space
 *   occupied by its children or layered regions. Will not trigger if the
 *   frame is hidden, unless the frame was just hidden with the mouse
-*   previously inside the frame.
+*   previously inside the frame. Finally, this _will_ trigger whenever
+*   the mouse enters another mouse-enabled frame with a higher level/strata,
+*   even if the mouse is still technically within this frame's region.
 *   - `OnLoad`: Triggered just after the frame is created. This is where
 *   you would normally register for events and specific inputs, set up
 *   initial states for extra logic, or do localization. When this event is
@@ -129,16 +134,21 @@
 *   - `OnMouseDown`: Triggered when any mouse button is pressed. Will not
 *   trigger if the frame is hidden. This event provides one argument to
 *   the registered callback: a string identifying the mouse button
-*   (`"LeftButton"`, `"RightButton"`, or `"MiddleButton"`).
+*   (`"LeftButton"`, `"RightButton"`, or `"MiddleButton"`). This event will
+*   only fire for the top-most frame under the mouse cursor which is
+*   mouse-click-enabled.
 *   - `OnMouseUp`: Triggered when any mouse button is released. Will not
 *   trigger if the frame is hidden. This event provides one argument to
 *   the registered callback: a string identifying the mouse button
-*   (`"LeftButton"`, `"RightButton"`, or `"MiddleButton"`).
+*   (`"LeftButton"`, `"RightButton"`, or `"MiddleButton"`). This event will
+*   only fire for the top-most frame under the mouse cursor which is
+*   mouse-click-enabled.
 *   - `OnMouseWheel`: Triggered when the mouse wheel is moved. This event
 *   provides one argument to the registered callback: a number indicating by
 *   how many "notches" the wheel has turned in this event. A positive value
 *   means the wheel has been moved "away" from the user (this would normally
-*   scroll *up* in a document).
+*   scroll *up* in a document). This even will only fire for the top-most
+*   frame under the mouse cursor which is mouse-wheel-enabled.
 *   - `OnReceiveDrag`: Triggered when the mouse pointer was previously
 *   dragged onto the frame, and when one of the mouse button registered for
 *   dragging (see @{Frame:register_for_drag}) is released. This enables
@@ -272,11 +282,15 @@ void frame::register_on_lua(sol::state& mLua)
 
     /** @function enable_mouse
     */
-    mClass.set_function("enable_mouse", [](frame& mSelf, bool bEnable,
-        sol::optional<bool> bWorldAllowed)
-    {
-        mSelf.enable_mouse(bEnable, bWorldAllowed.value_or(false));
-    });
+    mClass.set_function("enable_mouse", member_function<&frame::enable_mouse>());
+
+    /** @function enable_mouse_click
+    */
+    mClass.set_function("enable_mouse_click", member_function<&frame::enable_mouse_click>());
+
+    /** @function enable_mouse_move
+    */
+    mClass.set_function("enable_mouse_move", member_function<&frame::enable_mouse_move>());
 
     /** @function enable_mouse_wheel
     */
@@ -462,9 +476,13 @@ void frame::register_on_lua(sol::state& mLua)
     */
     mClass.set_function("is_keyboard_enabled", member_function<&frame::is_keyboard_enabled>());
 
-    /** @function is_mouse_enabled
+    /** @function is_mouse_click_enabled
     */
-    mClass.set_function("is_mouse_enabled", member_function<&frame::is_mouse_enabled>());
+    mClass.set_function("is_mouse_click_enabled", member_function<&frame::is_mouse_click_enabled>());
+
+    /** @function is_mouse_move_enabled
+    */
+    mClass.set_function("is_mouse_move_enabled", member_function<&frame::is_mouse_move_enabled>());
 
     /** @function is_mouse_wheel_enabled
     */
