@@ -98,6 +98,8 @@ Other changes:
  - gui: renamed event_manager to event_emitter
  - gui: renamed input::manager::get_key_name into input::get_key_codename
  - gui: renamed input::manager::get_mouse_button_string into input::get_mouse_button_codename
+ - gui: renamed input::manager::get_key_name overloads with modifiers
+ - gui: renamed input::manager to input::dispatcher
  - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
  - gui: removed the sprite class
  - gui: removed uiobject::get_base()
@@ -113,8 +115,7 @@ Other changes:
  - gui: removed uiobject::set_newly_created/is_newly_created (no longer necessary)
  - gui: removed manager::is_loading_ui() (no longer necessary)
  - gui: removed manager::begin() and end()
- - gui: renamed input::manager::get_key_name overloads with modifiers
- - gui: renamed input::manager to input::dispatcher
+ - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
@@ -148,6 +149,7 @@ Other changes:
  - gui: added slider::set_orientation(const std::string&)
  - gui: added status_bar::set_orientation(const std::string&)
  - gui: added manager::close_ui_now and made close_ui safer
+ - gui: added frame::enable_mouse_click and frame::enable_mouse_move
  - gui: render targets can now have texture filtering other than nearest
  - gui: GUI caching is now disabled by default
  - gui: improved peformance of "update borders" notifications
